# lex-vector

./: .gitignore  .gitmodules  2026-01-17-tem-algum-bug-rolando-com-conversas-que-so-resume.txt  APIs_Jurisprudencia_Comparacao.md  APIs_Jurisprudencia_Comparacao.md:Zone.Identifier  ARCHITECTURE.md  AUDIT_REPORT.md  CC-GottaKnow.md  CHANGELOG.md  CLAUDE.md  DISASTER_HISTORY.md  DISCOVERY_REPORT.md  GEMINI.md  IMPROVEMENT_REPORT.md  INSTALL_PROFILE.md  ISSUES.md  LINUX_DEV_SETUP.md  LINUX_MIGRATION_CHEATSHEET.md  LINUX_MIGRATION_COMPLETE.md  LINUX_MIGRATION_PLAN.md  MarkerREADME.md  Minimal-RAM-1M.md  PLANO_SCRIPT_PERMISSOES.md  POWERSHELL-PROFILE-SETUP.md  README.md  README_SESSAO_2025-11-13.md  RELATORIO_IMPLEMENTACAO_JURISPRUDENCIA.md  SKILLS_INSTALLATION_REPORT.md  SOLUCAO_PERMISSOES_HOME_PC.md  STATUSLINE_DECISION_SUMMARY.md  THIRD_PARTY_SKILLS_INSTALLATION_REPORT.md  VALIDACAO_FINAL.md  VIBE-LOG-INTEGRATION-PROPOSAL.md  VISUALIZAÇÃO DE DIRETÓRIOS.md  WSL2-INSTALL-GUIDE.md  WSL_SETUP.md  a2as.yaml  analise-windows-rapida.sh  app.py  claude-code-projetos-architecture-v2.html  (+20 more)
agentes/djen-tracker/: .gitignore  CHANGELOG_TRIBUNAIS.md  DOCUMENTATION_UPGRADE.md  IMPLEMENTACAO_FILTRO_OAB.md  README.md  README_FILTRO_OAB.md  RESUMO_EXECUTIVO.md  TESTING.md  config.json  exemplo_filtro_oab.py  main.py  monitor_daily_oab.py  pyproject.toml  pytest.ini  requirements.txt  run_agent.ps1  test_30_days_all_meios.py  test_all_65_tribunals.py  test_all_meios.py  test_all_tribunais.py  test_api_completeness.py  test_api_pagination.py  test_busca_oab_json.py  test_comprehensive_oab_search.py  test_comunicacao_deep_check.py  test_comunicacao_endpoint.py  test_comunicacao_full_pagination.py  test_find_oab_in_all_fields.py  test_meio_D_busca_total.py  test_oab_filter.py  test_oab_with_any_suffix.py  test_quick_download.py  test_real_oab_129021_sp.py  test_sanity_check.py  test_search_in_texto.py  test_show_real_oabs.py
agentes/djen-tracker/docs/: QUICKSTART.md  README_IMPROVEMENTS.md
agentes/djen-tracker/src/: __init__.py  cache_manager.py  caderno_filter.py  continuous_downloader.py  oab_filter.py  oab_matcher.py  parallel_processor.py  path_utils.py  pdf_text_extractor.py  rate_limiter.py  result_exporter.py  tribunais.py
agentes/djen-tracker/tests/: README.md  __init__.py  conftest.py  test_cache_manager.py  test_integration.py  test_oab_matcher.py  test_path_utils.py  test_pdf_text_extractor.py  test_tribunais.py
agentes/legal-rag/: .env.example  .gitignore  QUICKSTART.md  README.md  STATUS.md  config.json  pyproject.toml  requirements.txt
agentes/legal-rag/config/: embeddings_models.py  settings.py
agentes/legal-rag/indexing/: models.py
agentes/oab-watcher/: .gitignore  BLOQUEIO_API.md  DIAGNOSTICO.md  README.md  debug_api_acesso.py  pyproject.toml  test_api_diagnostico.py
agentes/oab-watcher/src/: __init__.py  api_client.py  busca_inteligente.py  busca_oab_v2.py  cache_manager.py  text_parser.py
ferramentas/legal-doc-assembler/: README.md  progress.json  pyproject.toml  test_execution.py
ferramentas/legal-doc-assembler/app/: streamlit_app.py
ferramentas/legal-doc-assembler/src/: __init__.py  engine.py  normalizers.py
ferramentas/legal-doc-assembler/tests/: test_engine.py  test_normalizers.py
legal-extraction/pdf-extractor-cli/: .env.example  .gitignore  CHEATSHEET.md  README.md  pyproject.toml
legal-extraction/pdf-extractor-cli/test-documents/: README.md
legal-extractor-cli/: README.md  pyproject.toml  run.sh
legal-extractor-cli/src/legal_extractor_cli/: __init__.py  extractor.py  logo.py
legal-extractor-tui/: README.md  Research-templates-guidance-TUI-TEXTUAL.md  TODO.md  pyproject.toml  run.sh
legal-extractor-tui/DevDocs/: APP_ARCHITECTURE.md
legal-extractor-tui/src/legal_extractor_tui/: config.py
legal-workbench/ccui-app/src-tauri/: Cargo.toml  tauri.conf.json
legal-workbench/ccui-backend/: Cargo.toml  Dockerfile
legal-workbench/ccui-backend/src/: claude_types.rs  config.rs  error.rs  lib.rs  main.rs  message_part.rs  pane_proxy.rs  process_proxy.rs  routes.rs  session.rs  team_watcher.rs  tmux.rs  ws.rs
legal-workbench/ccui-backend/tests/: channel_auto_register.rs  config_error_unit.rs  pane_proxy_integration.rs  routes_integration.rs  session_integration.rs  session_persistence.rs  team_watcher_integration.rs  tmux_integration.rs  ws_protocol.rs
legal-workbench/ferramentas/ledes-converter/: .env.example  CLAUDE.md  COMPLIANCE_AUDIT.md  README.md  pyproject.toml  requirements.txt
legal-workbench/ferramentas/legal-text-extractor/: .gitignore  CLAUDE.md  GEMINI_PROMPT_INTERFACE.md  README.md  ROADMAP.md  gemini_postprocess.py  local_postprocess.py  main.py  marker_benchmark_image.py  marker_gpu_benchmark.ipynb  modal_worker.py  pack_context.py  pyproject.toml  pytest.ini  requirements.txt  test_escalation.py  test_orchestrator.py  test_step_01.py  test_t4_gpu.py
legal-workbench/frontend/src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
mcp-servers/trello-mcp/: .gitignore  README.md  VALIDATION_REPORT.md  pyproject.toml  verify_setup.py
mcp-servers/trello-mcp/configs/: claude_code_cli_setup.md
mcp-servers/trello-mcp/src/: __init__.py  models.py  server.py  trello_client.py
stj-vec/: .gitignore  Cargo.toml  config.toml  legal-vec.toml  search-config.toml
stj-vec/agent/: package.json
stj-vec/agent/prompts/: decomposer.md
stj-vec/agent/src/: decompose.ts
stj-vec/config/: expansao_juridica.json
stj-vec/crates/case-ingest/: Cargo.toml
stj-vec/crates/core/: Cargo.toml
stj-vec/frontend/: index.html  package.json  vite.config.ts
stj-vec/modal/: benchmark_gpu.py  download_model.py  embed.py  embed_hybrid.py  serve_decomposer.py  test_decomposer.py
stj-vec/scripts/: backfill_metadata.py  enrich_qdrant_payload.py  export-for-modal.sh  export_onnx.py  extract_classe.py  extract_classe_pass2.py  extract_orgao_data.py  extract_orgao_data_julgamento.py  import-from-modal.sh  import_embeddings.py  import_qdrant.py  populate_secao.py
stj-vec/web/: .mcp.json  CLAUDE.md  composer.json
(+1871 files in other folders)
