[project]
name = "legal-extractor-cli"
version = "0.1.0"
description = "CLI simplificada para o Legal Text Extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
marker = [
    "marker-pdf>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
legal-extract = "legal_extractor_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_extractor_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"
