[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-extractor-tui"
version = "0.1.0"
description = "TUI for Brazilian Legal Document Text Extraction"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "PedroGiudice" }
]
keywords = ["tui", "legal", "pdf", "extraction", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Legal extractor dependencies
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "anthropic>=0.73.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",
    # Vision pipeline (step_02)
    "pdf2image>=1.16.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "reportlab>=4.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "textual-dev",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
legal-extractor-tui = "legal_extractor_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_extractor_tui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
