[project]
name = "djen-tracker"
version = "1.0.0"
description = "Monitor contínuo de cadernos DJEN com scraping e download automático"
authors = [
    {name = "PedroGiudice", email = "pedro@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["djen", "scraping", "cadernos", "juridico", "monitoramento"]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "tenacity>=8.2.3",
    "tqdm>=4.66.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q", "--cov=src"]
testpaths = ["tests"]
