# pyproject.toml - Legal RAG System
# Sistema de Retrieval-Augmented Generation para Automação Jurídica
# Gerenciado via UV (ultra-fast Python package installer)

[project]
name = "legal-rag-system"
version = "1.0.0"
description = "Sistema RAG para consultas jurisprudenciais brasileiras"
requires-python = ">=3.10"
authors = [
    {name = "Pedro Giudice", email = "pedro@cmradvogados.com.br"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # RAG Framework
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "langchain-anthropic>=0.1.0",
    "llama-index>=0.9.0",

    # Vector Stores (Multi-backend)
    "chromadb>=0.4.22",              # Local, SQLite-backed
    "qdrant-client>=1.7.0",          # Production-grade, filtros avançados
    "weaviate-client>=3.25.0",       # GraphRAG capabilities

    # Embeddings
    "sentence-transformers>=2.3.0",  # HuggingFace models
    "fastembed>=0.2.0",              # Lightweight embeddings (Qdrant)

    # Reranking
    "rerankers>=0.2.0",              # Abstração multi-provider
    "flashrank>=0.2.0",              # Ultra-fast reranking

    # Text Processing
    "unidecode>=1.3.8",              # Remove diacríticos
    "nltk>=3.8.1",                   # RSLP stemmer, tokenização
    "spacy>=3.7.0",                  # NER, POS tagging
    "pymupdf>=1.23.0",               # PDF extraction
    "pdfplumber>=0.10.0",            # Extração estruturada de PDFs
    "pytesseract>=0.3.10",           # OCR para PDFs escaneados

    # Jurídico Específico
    "lxml>=5.1.0",                   # HTML parsing (DJEN)
    "beautifulsoup4>=4.12.0",        # Web scraping tribunais
    "requests>=2.31.0",
    "httpx>=0.26.0",                 # HTTP async

    # BM25 e Sparse Retrieval
    "rank-bm25>=0.2.2",              # BM25Okapi

    # Avaliação RAG
    "ragas>=0.1.0",                  # RAG evaluation framework

    # Utilities
    "pydantic>=2.5.0",               # Validação de dados
    "pydantic-settings>=2.1.0",      # Config management
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",                 # Logging estruturado
    "tqdm>=4.66.0",                  # Progress bars
    "rich>=13.7.0",                  # Terminal UI

    # Data Science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",            # Property-based testing

    # Type Checking
    "mypy>=1.8.0",
    "types-requests>=2.31.0",

    # AI/ML Core
    "anthropic>=0.18.0",             # Claude API
    "tiktoken>=0.5.0",               # Tokenização
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",                  # PyTorch GPU
    "faiss-gpu>=1.7.4",              # FAISS GPU (vetores)
]

dev = [
    "black>=23.12.0",
    "ruff>=0.1.11",                  # Linter ultra-rápido
    "pre-commit>=3.6.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configurations
index-url = "https://pypi.org/simple"
compile-bytecode = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Flexível para início
ignore_missing_imports = true  # Muitas libs sem stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
    "*/site-packages/*"
]
