[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-extractor-cli"
version = "1.0.0"
description = "Professional CLI for extracting Brazilian legal PDFs with OCR"
authors = [
    {name = "Preprocessador Jurídico Team"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["pdf", "ocr", "legal", "brazilian", "extractor", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "pdfplumber>=0.10.0",
    "paddleocr>=2.7.0",
    "pdf2image>=1.16.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-pyyaml>=6.0.0",
]

gpu = [
    "paddlepaddle-gpu>=2.5.0",
]

[project.scripts]
pdf-extractor = "pdf_extractor.cli.main:cli"

[project.urls]
Homepage = "https://github.com/PedroGiudice/pdf-extractor-cli"
Documentation = "https://github.com/PedroGiudice/pdf-extractor-cli#readme"
Repository = "https://github.com/PedroGiudice/pdf-extractor-cli"
Issues = "https://github.com/PedroGiudice/pdf-extractor-cli/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=pdf_extractor --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/pdf_extractor"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_extractor"]
