[project]
name = "ledes-converter"
version = "1.0.0"
description = "DOCX to LEDES 1998B converter for Salesforce LegalOps"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "python-magic>=0.4.27",
    "defusedxml>=0.7.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
