[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-text-extractor"
version = "1.0.0"
description = "Pipeline de extracao de texto juridico de documentos processuais brasileiros"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Legal Workbench Team"}
]
keywords = [
    "pdf",
    "ocr",
    "legal",
    "text-extraction",
    "brazilian-law",
    "juridico",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.20.0",
    "rich>=14.0.0",
    "pdfplumber>=0.11.0",
    "pdfminer.six>=20230101",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
marker = [
    "marker-pdf>=1.0.0",
    "img2pdf>=0.5.0",
]
tesseract = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
all = [
    "marker-pdf>=1.0.0",
    "img2pdf>=0.5.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
]

[project.scripts]
lte = "cli.main:main_entry"

[project.urls]
Homepage = "https://github.com/legal-workbench/legal-text-extractor"
Documentation = "https://github.com/legal-workbench/legal-text-extractor#readme"
Repository = "https://github.com/legal-workbench/legal-text-extractor"

[tool.setuptools]
packages = ["cli", "src", "src.context", "src.core", "src.engines", "src.exporters", "src.gemini", "src.learning", "src.memory", "src.pipeline", "src.steps", "src.analyzers"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
