[package]
name = "legal-workbench"
version = "0.1.3"
description = "Legal Workbench - Thin Client Desktop"
authors = ["LexVector"]
edition = "2021"

[lib]
name = "legal_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
sha2 = "0.10"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
