[package]
name = "case-ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "case-ingest"
path = "src/main.rs"

[dependencies]
stj-vec-core = { path = "../core" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
md5 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
notify = "7"

[dev-dependencies]
tempfile = "3"
