[package]
name = "stj-vec-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
md5 = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
