[package]
name = "stj-vec-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
stj-vec-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
