[package]
name = "legal-vec-ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "legal-vec-ingest"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
md5 = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
