[package]
name = "stj-vec-search"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# ONNX Runtime (embedding)
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "ndarray"] }
tokenizers = "0.21"
ndarray = "0.17"

# Qdrant
qdrant-client = "1"

# SQLite (pool manual, r2d2_sqlite incompativel com rusqlite 0.33)
rusqlite = { workspace = true }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
regex = "1"
