[package]
name = "stj-vec-server"
version = "0.1.0"
edition = "2021"

[dependencies]
stj-vec-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio-util = "0.7"
